# Localization

./: .gitignore  README.md  setup.cfg
Localization/: __init__.py  localization.py
