[metadata]
name        = Localization!
version     = 1.0
description = Localization! is a lightweight module for localization of your applications.
url         = https://github.com/De4oult/Localization
license     = MIT License
keywords    = python, cli, package, json, localization, python3, python3.12, locales, language, languages, translation, translate

author = de4oult
author_email = kayra.dist@gmail.com

long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires  = >= 3.12

packages = Localization
zip_safe = False